修复swagger bug
